objects/LLM_Sales_Rep_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Rep Assignments</relationshipLabel>
        <relationshipName>Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Division__c</fullName>
        <label>Channel</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Employee_Number__c</fullName>
        <description>Load Employee Number from Informatica for Sales Rep Assignment</description>
        <label>Rep Employee Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Number__c</fullName>
        <label>Territory Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Sales Rep Assignment</label>
    <nameField>
        <displayFormat>SRA-{0000000}</displayFormat>
        <label>Sales Rep Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>